--- a/docs/api/qiskit-ibm-transpiler/ai-ai-linear-function-synthesis.mdx
+++ b/docs/api/qiskit-ibm-transpiler/ai-ai-linear-function-synthesis.mdx
@@ -8,14 +8,15 @@ python_api_name: qiskit_ibm_transpiler.ai.AILinearFunctionSynthesis
 
 # AILinearFunctionSynthesis
 
-<Class id="qiskit_ibm_transpiler.ai.AILinearFunctionSynthesis" isDedicatedPage={true} github="https://github.com/Qiskit/qiskit-ibm-transpiler/tree/stable/0.10/qiskit_ibm_transpiler/ai/synthesis.py#L261-L311" signature="qiskit_ibm_transpiler.ai.AILinearFunctionSynthesis(backend_name: str, replace_only_if_better: bool = True, max_threads: int | None = None)" modifiers="class">
+<Class id="qiskit_ibm_transpiler.ai.AILinearFunctionSynthesis" isDedicatedPage={true} github="https://github.com/Qiskit/qiskit-ibm-transpiler/tree/stable/0.11/qiskit_ibm_transpiler/ai/synthesis.py#L233-L283" signature="qiskit_ibm_transpiler.ai.AILinearFunctionSynthesis(coupling_map: list[list[int]] | None = None, backend: Backend | None = None, replace_only_if_better: bool = True, max_threads: int | None = None)" modifiers="class">
   Bases: `AISynthesis`
 
   Synthesis for Linear Function circuits (blocks of CX and SWAP gates). Currently up to 9 qubit blocks.
 
   **Parameters**
 
-  *   **backend\_name** ([*str*](https://docs.python.org/3/library/stdtypes.html#str "(in Python v3.13)")) – Name of the backend used for doing the AI Linear Function synthesis.
+  *   **coupling\_map** ([*list*](https://docs.python.org/3/library/stdtypes.html#list "(in Python v3.13)")*\[*[*list*](https://docs.python.org/3/library/stdtypes.html#list "(in Python v3.13)")*\[*[*int*](https://docs.python.org/3/library/functions.html#int "(in Python v3.13)")*]], optional*) – A list of pairs that represents physical links between qubits.
+  *   **backend** (*Backend, optional*) – Backend used for doing the AI Linear Function synthesis
   *   **replace\_only\_if\_better** ([*bool*](https://docs.python.org/3/library/functions.html#bool "(in Python v3.13)")*, optional*) – Determine if replace the original circuit with the synthesized one if it’s better, defaults to True.
   *   **max\_threads** ([*int*](https://docs.python.org/3/library/functions.html#int "(in Python v3.13)")*, optional*) – Set the number of requests to send in parallel.
 
@@ -71,7 +72,7 @@ python_api_name: qiskit_ibm_transpiler.ai.AILinearFunctionSynthesis
 
   ### run
 
-  <Function id="qiskit_ibm_transpiler.ai.AILinearFunctionSynthesis.run" github="https://github.com/Qiskit/qiskit-ibm-transpiler/tree/stable/0.10/qiskit_ibm_transpiler/ai/synthesis.py#L187-L204" signature="run(dag)">
+  <Function id="qiskit_ibm_transpiler.ai.AILinearFunctionSynthesis.run" github="https://github.com/Qiskit/qiskit-ibm-transpiler/tree/stable/0.11/qiskit_ibm_transpiler/ai/synthesis.py#L159-L176" signature="run(dag)">
     Run a pass on the DAGCircuit. This is implemented by the pass developer.
 
     **Parameters**
@@ -85,7 +86,7 @@ python_api_name: qiskit_ibm_transpiler.ai.AILinearFunctionSynthesis
 
   ### synth\_nodes
 
-  <Function id="qiskit_ibm_transpiler.ai.AILinearFunctionSynthesis.synth_nodes" github="https://github.com/Qiskit/qiskit-ibm-transpiler/tree/stable/0.10/qiskit_ibm_transpiler/ai/synthesis.py#L140-L185" signature="synth_nodes(nodes)" />
+  <Function id="qiskit_ibm_transpiler.ai.AILinearFunctionSynthesis.synth_nodes" github="https://github.com/Qiskit/qiskit-ibm-transpiler/tree/stable/0.11/qiskit_ibm_transpiler/ai/synthesis.py#L112-L157" signature="synth_nodes(nodes)" />
 
   ### update\_status
 
