--- a/docs/api/qiskit-ibm-transpiler/0.10/ai-ai-permutation-synthesis.mdx
+++ b/docs/api/qiskit-ibm-transpiler/0.10/ai-ai-permutation-synthesis.mdx
@@ -1,22 +1,21 @@
 ---
-title: AILinearFunctionSynthesis (latest version)
-description: API reference for qiskit_ibm_transpiler.ai.AILinearFunctionSynthesis in the latest version of qiskit-ibm-transpiler
+title: AIPermutationSynthesis (v0.10)
+description: API reference for qiskit_ibm_transpiler.ai.AIPermutationSynthesis in qiskit-ibm-transpiler v0.10
 in_page_toc_min_heading_level: 1
 python_api_type: class
-python_api_name: qiskit_ibm_transpiler.ai.AILinearFunctionSynthesis
+python_api_name: qiskit_ibm_transpiler.ai.AIPermutationSynthesis
 ---
 
-# AILinearFunctionSynthesis
+# AIPermutationSynthesis
 
-<Class id="qiskit_ibm_transpiler.ai.AILinearFunctionSynthesis" isDedicatedPage={true} github="https://github.com/Qiskit/qiskit-ibm-transpiler/tree/stable/0.11/qiskit_ibm_transpiler/ai/synthesis.py#L233-L283" signature="qiskit_ibm_transpiler.ai.AILinearFunctionSynthesis(coupling_map: list[list[int]] | None = None, backend: Backend | None = None, replace_only_if_better: bool = True, max_threads: int | None = None)" modifiers="class">
+<Class id="qiskit_ibm_transpiler.ai.AIPermutationSynthesis" isDedicatedPage={true} github="https://github.com/Qiskit/qiskit-ibm-transpiler/tree/stable/0.10/qiskit_ibm_transpiler/ai/synthesis.py#L314-L358" signature="qiskit_ibm_transpiler.ai.AIPermutationSynthesis(backend_name: str, replace_only_if_better: bool = True, max_threads: int | None = None)" modifiers="class">
   Bases: `AISynthesis`
 
-  Synthesis for Linear Function circuits (blocks of CX and SWAP gates). Currently up to 9 qubit blocks.
+  Synthesis for Permutation circuits (blocks of SWAP gates). Currently available for 65, 33, and 27 qubit blocks.
 
   **Parameters**
 
-  *   **coupling\_map** ([*list*](https://docs.python.org/3/library/stdtypes.html#list "(in Python v3.13)")*\[*[*list*](https://docs.python.org/3/library/stdtypes.html#list "(in Python v3.13)")*\[*[*int*](https://docs.python.org/3/library/functions.html#int "(in Python v3.13)")*]], optional*) – A list of pairs that represents physical links between qubits.
-  *   **backend** (*Backend, optional*) – Backend used for doing the AI Linear Function synthesis
+  *   **backend\_name** ([*str*](https://docs.python.org/3/library/stdtypes.html#str "(in Python v3.13)")) – Name of the backend used for doing the AI Linear Function synthesis.
   *   **replace\_only\_if\_better** ([*bool*](https://docs.python.org/3/library/functions.html#bool "(in Python v3.13)")*, optional*) – Determine if replace the original circuit with the synthesized one if it’s better, defaults to True.
   *   **max\_threads** ([*int*](https://docs.python.org/3/library/functions.html#int "(in Python v3.13)")*, optional*) – Set the number of requests to send in parallel.
 
@@ -24,7 +23,7 @@ python_api_name: qiskit_ibm_transpiler.ai.AILinearFunctionSynthesis
 
   ### is\_analysis\_pass
 
-  <Attribute id="qiskit_ibm_transpiler.ai.AILinearFunctionSynthesis.is_analysis_pass">
+  <Attribute id="qiskit_ibm_transpiler.ai.AIPermutationSynthesis.is_analysis_pass">
     Check if the pass is an analysis pass.
 
     If the pass is an AnalysisPass, that means that the pass can analyze the DAG and write the results of that analysis in the property set. Modifications on the DAG are not allowed by this kind of pass.
@@ -32,7 +31,7 @@ python_api_name: qiskit_ibm_transpiler.ai.AILinearFunctionSynthesis
 
   ### is\_transformation\_pass
 
-  <Attribute id="qiskit_ibm_transpiler.ai.AILinearFunctionSynthesis.is_transformation_pass">
+  <Attribute id="qiskit_ibm_transpiler.ai.AIPermutationSynthesis.is_transformation_pass">
     Check if the pass is a transformation pass.
 
     If the pass is a TransformationPass, that means that the pass can manipulate the DAG, but cannot modify the property set (but it can be read).
@@ -42,7 +41,7 @@ python_api_name: qiskit_ibm_transpiler.ai.AILinearFunctionSynthesis
 
   ### execute
 
-  <Function id="qiskit_ibm_transpiler.ai.AILinearFunctionSynthesis.execute" signature="execute(passmanager_ir, state, callback=None)">
+  <Function id="qiskit_ibm_transpiler.ai.AIPermutationSynthesis.execute" signature="execute(passmanager_ir, state, callback=None)">
     Execute optimization task for input Qiskit IR.
 
     **Parameters**
@@ -62,7 +61,7 @@ python_api_name: qiskit_ibm_transpiler.ai.AILinearFunctionSynthesis
 
   ### name
 
-  <Function id="qiskit_ibm_transpiler.ai.AILinearFunctionSynthesis.name" signature="name()">
+  <Function id="qiskit_ibm_transpiler.ai.AIPermutationSynthesis.name" signature="name()">
     Name of the pass.
 
     **Return type**
@@ -72,7 +71,7 @@ python_api_name: qiskit_ibm_transpiler.ai.AILinearFunctionSynthesis
 
   ### run
 
-  <Function id="qiskit_ibm_transpiler.ai.AILinearFunctionSynthesis.run" github="https://github.com/Qiskit/qiskit-ibm-transpiler/tree/stable/0.11/qiskit_ibm_transpiler/ai/synthesis.py#L159-L176" signature="run(dag)">
+  <Function id="qiskit_ibm_transpiler.ai.AIPermutationSynthesis.run" github="https://github.com/Qiskit/qiskit-ibm-transpiler/tree/stable/0.10/qiskit_ibm_transpiler/ai/synthesis.py#L187-L204" signature="run(dag)">
     Run a pass on the DAGCircuit. This is implemented by the pass developer.
 
     **Parameters**
@@ -86,11 +85,11 @@ python_api_name: qiskit_ibm_transpiler.ai.AILinearFunctionSynthesis
 
   ### synth\_nodes
 
-  <Function id="qiskit_ibm_transpiler.ai.AILinearFunctionSynthesis.synth_nodes" github="https://github.com/Qiskit/qiskit-ibm-transpiler/tree/stable/0.11/qiskit_ibm_transpiler/ai/synthesis.py#L112-L157" signature="synth_nodes(nodes)" />
+  <Function id="qiskit_ibm_transpiler.ai.AIPermutationSynthesis.synth_nodes" github="https://github.com/Qiskit/qiskit-ibm-transpiler/tree/stable/0.10/qiskit_ibm_transpiler/ai/synthesis.py#L140-L185" signature="synth_nodes(nodes)" />
 
   ### update\_status
 
-  <Function id="qiskit_ibm_transpiler.ai.AILinearFunctionSynthesis.update_status" signature="update_status(state, run_state)">
+  <Function id="qiskit_ibm_transpiler.ai.AIPermutationSynthesis.update_status" signature="update_status(state, run_state)">
     Update workflow status.
 
     **Parameters**
