--- a/docs/api/qiskit-ibm-transpiler/0.10/ai.mdx
+++ b/docs/api/qiskit-ibm-transpiler/0.10/ai.mdx
@@ -1,6 +1,6 @@
 ---
-title: ai (latest version)
-description: API reference for qiskit_ibm_transpiler.ai in the latest version of qiskit-ibm-transpiler
+title: ai (v0.10)
+description: API reference for qiskit_ibm_transpiler.ai in qiskit-ibm-transpiler v0.10
 in_page_toc_min_heading_level: 2
 python_api_type: module
 python_api_name: qiskit_ibm_transpiler.ai
@@ -18,10 +18,10 @@ python_api_name: qiskit_ibm_transpiler.ai
 
 |                                                                                                                                            |                                                                                                                                     |
 | ------------------------------------------------------------------------------------------------------------------------------------------ | ----------------------------------------------------------------------------------------------------------------------------------- |
-| [`AIRouting`](ai-ai-routing "qiskit_ibm_transpiler.ai.AIRouting")(\[coupling\_map, backend, ...])                                          | The AIRouting pass acts both as a layout stage and a routing stage.                                                                 |
-| [`AICliffordSynthesis`](ai-ai-clifford-synthesis "qiskit_ibm_transpiler.ai.AICliffordSynthesis")(\[coupling\_map, backend, ...])           | Synthesis for Clifford circuits (blocks of H, S and CX gates).                                                                      |
-| [`AILinearFunctionSynthesis`](ai-ai-linear-function-synthesis "qiskit_ibm_transpiler.ai.AILinearFunctionSynthesis")(\[coupling\_map, ...]) | Synthesis for Linear Function circuits (blocks of CX and SWAP gates).                                                               |
-| [`AIPermutationSynthesis`](ai-ai-permutation-synthesis "qiskit_ibm_transpiler.ai.AIPermutationSynthesis")(\[coupling\_map, ...])           | Synthesis for Permutation circuits (blocks of SWAP gates).                                                                          |
+| [`AIRouting`](ai-ai-routing "qiskit_ibm_transpiler.ai.AIRouting")(\[backend\_name, coupling\_map, ...])                                    | The AIRouting pass acts both as a layout stage and a routing stage.                                                                 |
+| [`AICliffordSynthesis`](ai-ai-clifford-synthesis "qiskit_ibm_transpiler.ai.AICliffordSynthesis")(backend\_name\[, ...])                    | Synthesis for Clifford circuits (blocks of H, S and CX gates).                                                                      |
+| [`AILinearFunctionSynthesis`](ai-ai-linear-function-synthesis "qiskit_ibm_transpiler.ai.AILinearFunctionSynthesis")(backend\_name\[, ...]) | Synthesis for Linear Function circuits (blocks of CX and SWAP gates).                                                               |
+| [`AIPermutationSynthesis`](ai-ai-permutation-synthesis "qiskit_ibm_transpiler.ai.AIPermutationSynthesis")(backend\_name\[, ...])           | Synthesis for Permutation circuits (blocks of SWAP gates).                                                                          |
 | [`CollectCliffords`](ai-collect-cliffords "qiskit_ibm_transpiler.ai.CollectCliffords")(\[do\_commutative\_analysis, ...])                  | Collects Clifford blocks as Instruction objects and stores the original sub-circuit to compare against it after synthesis.          |
 | [`CollectLinearFunctions`](ai-collect-linear-functions "qiskit_ibm_transpiler.ai.CollectLinearFunctions")(\[...])                          | Collects blocks of SWAP and CX as LinearFunction objects and stores the original sub-circuit to compare against it after synthesis. |
 | [`CollectPermutations`](ai-collect-permutations "qiskit_ibm_transpiler.ai.CollectPermutations")(\[...])                                    | Collects blocks of SWAP circuits as Permutations.                                                                                   |
